# vpconnect-install

./: .gitattributes  .gitignore  LICENSE  README.md  bootstrap-dist.sh  bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.run/: Build GUI exe PyInstaller.run.xml  Build full distribution.run.xml  pytest with coverage.run.xml  pytest.run.xml
packaging/: build_distribution.py  vpconnect-install-gui.spec
scripts/: README.md  build_gui_exe.ps1  install_venv.bat  install_venv.sh
scripts/linux/: bootstrap-dist.sh  bootstrap.sh
scripts/macos/: bootstrap-dist.sh  bootstrap.sh
scripts/windows/cmd/: bootstrap-dist.bat  bootstrap.bat
scripts/windows/ps/: bootstrap-dist.ps1  bootstrap.ps1
src/vpconnect_install/: __init__.py  __main__.py  cli.py  config.py  configure_bootstrap.py  defaults.py  domain_client.py  gui_clipboard.py  gui_tk.py  outputs.py  remote_scripts_fetch.py  resources.py  runner.py  ssh_session.py  version.py  vpconfigure_provision.py
src/vpconnect_install/remote/: __init__.py
tests/: test___main__.py  test_cli.py  test_cli_main_and_secrets.py  test_config_validation.py  test_configure_bootstrap.py  test_configure_bootstrap_run_mock.py  test_configure_bootstrap_unit.py  test_entrypoints_coverage.py  test_gui_clipboard_unit.py  test_gui_tk_unit.py  test_outputs.py  test_outputs_edges.py  test_remote_scripts_fetch.py  test_runner_helpers.py  test_runner_run_mock.py  test_ssh_session_paramiko_mock.py  test_ssh_session_unit.py  test_vpconfigure_phases_extended_mock.py  test_vpconfigure_provision.py  test_vpconfigure_run_script_unit.py
