[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vpconnect-install"
dynamic = ["version"]
description = "SSH provisioning via vpconnect-configure: debian/centos/freebsd targets; WireGuard, MTProxy, VPManage (selfvpn)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.4.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "ruff>=0.8",
]

[tool.setuptools.dynamic]
version = { attr = "vpconnect_install.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Tk-модули: юнит-тесты есть, но стабильный headless-прогон зависит от Tcl/Tk; в метриках покрытия считаем только «не-GUI» слой.
[tool.coverage.run]
source = ["src"]
omit = ["**/gui_clipboard.py", "**/gui_tk.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
